--- a/基于情绪信息的智能音乐推荐与生成.md
+++ b/基于情绪信息的智能音乐推荐与生成.md
@@ -30,8 +30,23 @@
 乐随心动
 
 #### 2. 软件功能简介
+软件分为音乐分类和生成两个部分。界面显示如下
 
+![ainwindo](/Users/Jocey/Desktop/srtpProject/mainwindow.png)
 
+- 音乐分类部分
+
+  点击recognize按钮，将会跳出在本地选择歌曲的界面，选择好歌曲（MP3
+
+  文件）后，程序将把歌曲转换成wav格式文件再用模型进行预测，输出结果示意图：
+
+  ![howdem](/Users/Jocey/Desktop/srtpProject/showdemo.png)
+
+  V表示歌曲的气氛指数，V越高则歌曲曲调越欢乐，A表示歌曲的激昂程度，A越高表示歌曲曲风越激昂。上图显示的是一首非常欢愉但曲风偏舒缓的歌曲。
+
+  ​
+
+  音乐生成部分
 
 ## 四、项目代码
 
