--- a/基于情绪信息的智能音乐推荐与生成.md
+++ b/基于情绪信息的智能音乐推荐与生成.md
@@ -6,9 +6,9 @@
   - 身份证：320401199711032222
   - 专业：计算机科学与技术
 - 秦子谦：
-  - 身份证：
+  - 身份证：320402199610142218
   - 专业：计算机科学与技术
-- 钱佳一：
+- 钱佳一：330382199711120921
   - 身份证：
   - 专业：计算机科学与技术
 
@@ -354,6 +354,86 @@ class Generation:
         f.close()
         os.system("abc2midi "+p+"/tmp.abc -o "+self.file_name)
         os.remove(p+'/tmp.abc')
+```
+
+- abc格式文件读取代码
+
+```python
+import codecs
+import os
+import collections
+from six.moves import cPickle
+import numpy as np
+
+
+class TextLoader():
+    def __init__(self, data_dir, batch_size, seq_length, encoding='utf-8'):
+        self.data_dir = data_dir
+        self.batch_size = batch_size
+        self.seq_length = seq_length
+        self.encoding = encoding
+
+        input_file = os.path.join(data_dir, "input.txt")
+        vocab_file = os.path.join(data_dir, "vocab.pkl")
+        tensor_file = os.path.join(data_dir, "data.npy")
+
+        if not (os.path.exists(vocab_file) and os.path.exists(tensor_file)):
+            print("reading text file")
+            self.preprocess(input_file, vocab_file, tensor_file)
+        else:
+            print("loading preprocessed files")
+            self.load_preprocessed(vocab_file, tensor_file)
+        self.create_batches()
+        self.reset_batch_pointer()
+
+    def preprocess(self, input_file, vocab_file, tensor_file):
+        with codecs.open(input_file, "r", encoding=self.encoding) as f:
+            data = f.read()
+        counter = collections.Counter(data)
+        count_pairs = sorted(counter.items(), key=lambda x: -x[1])
+        self.chars, _ = zip(*count_pairs)
+        self.vocab_size = len(self.chars)
+        self.vocab = dict(zip(self.chars, range(len(self.chars))))
+        with open(vocab_file, 'wb') as f:
+            cPickle.dump(self.chars, f)
+        self.tensor = np.array(list(map(self.vocab.get, data)))
+        np.save(tensor_file, self.tensor)
+
+    def load_preprocessed(self, vocab_file, tensor_file):
+        with open(vocab_file, 'rb') as f:
+            self.chars = cPickle.load(f)
+        self.vocab_size = len(self.chars)
+        self.vocab = dict(zip(self.chars, range(len(self.chars))))
+        self.tensor = np.load(tensor_file)
+        self.num_batches = int(self.tensor.size / (self.batch_size *
+                                                   self.seq_length))
+
+    def create_batches(self):
+        self.num_batches = int(self.tensor.size / (self.batch_size *
+                                                   self.seq_length))
+
+        # When the data (tensor) is too small,
+        # let's give them a better error message
+        if self.num_batches == 0:
+            assert False, "Not enough data. Make seq_length and batch_size small."
+
+        self.tensor = self.tensor[:self.num_batches * self.batch_size * self.seq_length]
+        xdata = self.tensor
+        ydata = np.copy(self.tensor)
+        ydata[:-1] = xdata[1:]
+        ydata[-1] = xdata[0]
+        self.x_batches = np.split(xdata.reshape(self.batch_size, -1),
+                                  self.num_batches, 1)
+        self.y_batches = np.split(ydata.reshape(self.batch_size, -1),
+                                  self.num_batches, 1)
+
+    def next_batch(self):
+        x, y = self.x_batches[self.pointer], self.y_batches[self.pointer]
+        self.pointer += 1
+        return x, y
+
+    def reset_batch_pointer(self):
+        self.pointer = 0
 ```
 
 - 软件图形界面主窗口代码
@@ -1276,5 +1356,76 @@ for f in files:
         print(song.shape)
         print(song)
 pkl.dump(song_data, open("./midi_out", "wb"))
+```
+
+- midi处理代码
+
+```python
+from midiDealing import *
+import os
+FREQ_LIST = [16.352, 17.324, 18.354, 19.445, 20.602, 21.827, 23.125, 24.5, 25.957, 27.5, 29.135, 30.868]
+MUSIC_FILE = "out.mid"
+SAVE_FILE = "out1.mid"
+MUSIC_DIR = os.getcwd()
+v = 4
+a = 6
+
+
+def upper(s):
+    for k in range(len(s) - 1):
+        flag = 0
+        for i in range(9):
+            if flag == 0:
+                for j in range(len(FREQ_LIST) - 1):
+                    if FREQ_LIST[j] - 0.8 < s[k, 2] < FREQ_LIST[j] + 0.8:
+                        if j == len(FREQ_LIST) - 1:
+                            s[k, 2] = (i+2) * FREQ_LIST[j]
+                            flag = 1
+                            break
+                        else:
+                            s[k, 2] = FREQ_LIST[j + 1]
+                            break
+    return s
+
+
+def lower(s):
+    for k in range(len(s) - 1):
+        flag = 0
+        for i in range(9):
+            if flag == 0:
+                for j in range(len(FREQ_LIST) - 1):
+                    if FREQ_LIST[j] - 0.8 < s[k, 2] < FREQ_LIST[j] + 0.8:
+                        if j == 0 and i > 0:
+                            s[k, 2] = i * FREQ_LIST[len(FREQ_LIST) - 1]
+                            flag = 1
+                            break
+                        elif j != 0:
+                            s[k, 2] = FREQ_LIST[j - 1]
+                            break
+    return s
+
+if os.path.isfile(MUSIC_FILE):
+    song = read_one_file(MUSIC_DIR, MUSIC_FILE, False)
+    # print(song)
+    song = np.array(song)
+    # print(song)
+    cnt = 0
+    for k in range(len(song) - 1):
+        song[k, 0] = song[k + 1, 0] - song[k, 0]
+        if song[k, 0] == 0:
+            cnt = cnt + 1
+    time = song[len(song) - 1, 0]
+    note_len = time / (len(song) - cnt)
+    print("note number:%f" % note_len)
+    song[len(song) - 1, 0] = 0
+    for k in range(len(song) - 1):
+        song[k, 0] = song[k, 0] * 1 + 0.05 * (a - 5)
+    while v > 5:
+        song = upper(song)
+        v = v - 1
+    while v < 5:
+        song = lower(song)
+        v = v + 1
+    save_data(SAVE_FILE, song)
 ```
 
