--- a/基于情绪信息的智能音乐推荐与生成.md
+++ b/基于情绪信息的智能音乐推荐与生成.md
@@ -9,7 +9,7 @@
   - 身份证：320402199610142218
   - 专业：计算机科学与技术
 - 钱佳一：330382199711120921
-  - 身份证：
+  - 身份证：330382199711120921
   - 专业：计算机科学与技术
 
 ## 二、项目简介
@@ -32,21 +32,31 @@
 #### 2. 软件功能简介
 软件分为音乐分类和生成两个部分。界面显示如下
 
-![ainwindo](/Users/Jocey/Desktop/srtpProject/mainwindow.png)
+![ainwindo](mainwindow.png)
 
-- 音乐分类部分
+##### 音乐分类部分
 
-  点击recognize按钮，将会跳出在本地选择歌曲的界面，选择好歌曲（MP3
+点击recognize按钮，将会跳出在本地选择歌曲的界面，选择好歌曲（MP3
 
-  文件）后，程序将把歌曲转换成wav格式文件再用模型进行预测，输出结果示意图：
+文件）后，程序将把歌曲转换成wav格式文件再用模型进行预测，输出结果示意图：
 
-  ![howdem](/Users/Jocey/Desktop/srtpProject/showdemo.png)
+![howdem](showdemo.png)
 
-  V表示歌曲的气氛指数，V越高则歌曲曲调越欢乐，A表示歌曲的激昂程度，A越高表示歌曲曲风越激昂。上图显示的是一首非常欢愉但曲风偏舒缓的歌曲。
+V表示歌曲的气氛指数，V越高则歌曲曲调越欢乐，A表示歌曲的激昂程度，A越高表示歌曲曲风越激昂。上图显示的是一首非常欢愉但曲风偏舒缓的歌曲。
 
-  ​
+##### 音乐生成部分
 
-  音乐生成部分
+点击Generate按钮，将会跳出对话框，此时需要输入希望保存的midi文件的文件路径和文件名：
+
+![](save.png)
+
+输入保存文件信息后，将会进入一个选择V-A值的界面，用户将鼠标移动至中间圆形坐标区域，在下方会显示该坐标值对应的V-A值，单击即开始生成对应情绪的音乐midi文件：
+
+![](set_VA.png)
+
+随机生成的midi文件可以用garageBand(Mac)软件打开，即可正常播放，欣赏到机器生成的美妙音乐了，如下：
+
+![](garage.png)
 
 ## 四、项目代码
 
